# async-api-fast-workout

./: .env  README.md  alembic.ini  docker-compose.yaml  main.py  requirements.txt
.github/: sonarcloud.yaml
.github/workflows/: pyproject.toml  sonarcloud.yaml
alembic/: env.py
alembic/versions/: 7776edb3262e_create_initial_tables.py
config/: settings.py
shared/: database.py  init_db.py
src/controllers/: athlete.py  category.py  training_center.py
src/exceptions/: custom_exceptions.py
src/models/: athlete.py  base.py  category.py  training_center.py
src/repositories/: athlete.py  base.py  category.py  training_center.py
src/schemas/: athlete.py  base.py  category.py  training_center.py
src/services/: athlete.py  category.py  training_center.py
tests/: conftest.py
tests/services/: test_athlete_service.py  test_category_service.py
