#[build-system]
#requires = ["setuptools>=61.0"]
#build-backend = "setuptools.build_meta"
#
#[tool.pytest.ini_options]
#testpaths = ["account/tests", "shared/tests"]
#python_files = "test_*.py"
#python_classes = "Test*"
#python_functions = "test_*"
#addopts = "--verbose --strict-markers --strict-config --cov=./ --cov-report=term-missing --cov-report=html"
#
#[tool.coverage.run]
#source = ["."]
#omit = [
#    "*/tests/*",
#    "*/venv/*",
#    "*/.venv/*",
#    "*/__pycache__/*",
#    "*/.github/*",
#    "*/htmlcov/*"
#]
#
#[tool.coverage.report]
#exclude_lines = [
#    "pragma: no cover",
#    "def __repr__",
#    "if self.debug:",
#    "if settings.DEBUG",
#    "raise AssertionError",
#    "raise NotImplementedError",
#    "if 0:",
#    "if __name__ == .__main__.:",
#    "class .*\\bProtocol\\):",
#    "@(abc\\.)?abstractmethod"
#]